--- a/src/app/main/components/container/layout/layout.component.html
+++ b/src/app/main/components/container/layout/layout.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
-<mat-drawer-container class="example-container">
+<mat-drawer-container class="container">
     <mat-drawer mode="side" opened class="side-nav">
         <app-menu></app-menu>
     </mat-drawer>
-    <mat-drawer-content>Main content</mat-drawer-content>
+    <mat-drawer-content class="content">
+    </mat-drawer-content>
 </mat-drawer-container>
