--- a/src/app/main/components/container/layout/layout.component.scss
+++ b/src/app/main/components/container/layout/layout.component.scss
@@ -1,9 +1,11 @@
-.example-container {
+.container {
     width: auto;
-    height: 200px;
     margin: 10px;
-    background-color: rgba(46, 44, 44, 0.116);
+    background-color: rgba(255, 255, 255, 0.116);
   }
 .side-nav{
     width: 20%;
+}
+.content{
+  padding: 2rem;
 }
