--- a/src/app/main/components/container/layout/layout.component.html
+++ b/src/app/main/components/container/layout/layout.component.html
@@ -4,5 +4,6 @@
         <app-menu></app-menu>
     </mat-drawer>
     <mat-drawer-content class="content">
+        <router-outlet></router-outlet>
     </mat-drawer-content>
 </mat-drawer-container>
