--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -1,5 +1,5 @@
-<p>
-    <mat-toolbar class="toolbar">
+<p>   
+  <mat-toolbar class="toolbar">
       <span class="logo">MAVEKO</span> 
       <span class="example-spacer"></span>  
       <span class="p-input-icon-left search-bar">
@@ -7,8 +7,8 @@
         <input type="text" pInputText placeholder="Search" [(ngModel)]="value1" class="search-input-field" />
     </span>    
       <span class="example-spacer"></span>
-      <button mat-button> Products</button>
-      <button mat-button> Brands</button>
+      <button mat-button routerLink='/products'> Products</button>
+      <button mat-button routerLink='/categories'> Brands</button>
       <button mat-button> Suppliers</button>
       <button mat-button>Previous Activity</button>
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
