product and product-category modules are added. Product-detail component is added to product-managment

--- a/src/app/product-management/components/container/product-list/product-list.component.html
+++ b/src/app/product-management/components/container/product-list/product-list.component.html
@@ -4,4 +4,8 @@
   <app-product-list-view> </app-product-list-view>
   <app-product-list-view> </app-product-list-view>
   <app-product-list-view> </app-product-list-view>
+  <app-product-list-view> </app-product-list-view>
+  <app-product-list-view> </app-product-list-view>
+  <app-product-list-view> </app-product-list-view>
+ 
 </div>
