--- a/src/app/shared/components/ui/card-view/card-view.component.html
+++ b/src/app/shared/components/ui/card-view/card-view.component.html
@@ -9,6 +9,6 @@
       </p>
     </mat-card-content>
     <mat-card-actions align="end">
-    <mat-icon mat-button>arrow_forward</mat-icon>    
+    <mat-icon mat-button [routerLink]="routerLink">arrow_forward</mat-icon>    
     </mat-card-actions>
 </mat-card>
