--- a/src/app/main/components/container/menu/menu.component.scss
+++ b/src/app/main/components/container/menu/menu.component.scss
@@ -6,6 +6,10 @@
   }
  .top-text{
     margin-left: 1rem;
-    font-size: larger;
+    font-size:x-large;
     font-weight: 700;
  } 
+ .menu-text{
+   font-size: large;
+   font-weight: 500;
+ }
