--- a/src/app/main/components/container/layout/layout.component.html
+++ b/src/app/main/components/container/layout/layout.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
+<app-header
+(searchValue)="onSearchValueChange($event)"
+[orderCount]="orderCount$"
+></app-header>
 <mat-drawer-container class="container">
     <mat-drawer mode="side" opened class="side-nav">
         <app-menu></app-menu>
