--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -1,16 +1,10 @@
 <p>   
   <mat-toolbar class="toolbar">
-      <span class="logo">MAVEKO</span> 
-      <span class="example-spacer"></span>  
+      <span class="logo" routerLink="/">MAVEKO</span> 
       <span class="p-input-icon-left search-bar">
         <i class="pi pi-search"></i>
         <input type="text" pInputText placeholder="Search" [(ngModel)]="value" class="search-input-field" (keyup.enter)="searchValueChange()"/>
-    </span>    
-      <span class="example-spacer"></span>
-      <button mat-button routerLink='/products'> Products</button>
-      <button mat-button routerLink='/categories'> Brands</button>
-      <button mat-button> Suppliers</button>
-      <button mat-button>Previous Activity</button>
+    </span>        
       <mat-icon [matBadge]="orderCount" matBadgeColor="warn">add_shopping_cart</mat-icon>
       <span class="cdk-visually-hidden">
       </span>      
