--- a/src/app/admin/components/product-category-form/product-category-form.component.html
+++ b/src/app/admin/components/product-category-form/product-category-form.component.html
@@ -5,5 +5,5 @@
 
     <input formControlName="description" class="form-control fields" placeholder="description">
 
-    <button class="w-100 btn btn-lg btn-primary fields" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary fields" type="submit">Submit</button>
 </form>
