product capturing ui and other forms - see PC-7

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,11 +4,8 @@
 	<a [routerLink]="['/admin/contact_info']">Contact info</a>
 	<a [routerLink]="['/admin/currencie']">Currencie</a>
 	<a [routerLink]="['/admin/customer']">Customer</a>
-	<a [routerLink]="['/admin/package']">Package</a>
-	<a [routerLink]="['/admin/product_item']">Product Item</a>
 	<a [routerLink]="['/admin/product']">Product</a>
-	<a [routerLink]="['/admin/suppliers']">Suppliers</a>
+	<a [routerLink]="['/admin/supplier']">Suppliers</a>
 	<a [routerLink]="['/admin/unit_of_measure']">Unit of Measures</a>
-	<a [routerLink]="['/admin/users']">Users</a>
 </div>
 <router-outlet></router-outlet>
