--- a/src/app/admin/components/currency-information-form/currency-information-form.component.html
+++ b/src/app/admin/components/currency-information-form/currency-information-form.component.html
@@ -1,1 +1,9 @@
-<p>currency-information-form works!</p>
+<form [formGroup]="form" (submit)="submit()" class="login-form">
+    <h1 class="h3 mb-3 fw-normal fields">Currency Form</h1>
+
+    <input formControlName="name" class="form-control fields" placeholder="name">
+
+    <input formControlName="aliass" class="form-control fields" placeholder="aliass">
+
+    <button class="w-100 btn btn-lg btn-primary fields" type="submit">Submit</button>
+</form>
