--- a/src/app/admin/components/product-category-form/product-category-form.component.html
+++ b/src/app/admin/components/product-category-form/product-category-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (submit)="submit()" class="login-form">
-    <h1 class="h3 mb-3 fw-normal fields">Product Categor Form</h1>
+    <h1 class="h3 mb-3 fw-normal fields">Product Category Form</h1>
 
     <input formControlName="name" class="form-control fields" placeholder="name">
 
