--- a/src/app/product-management/components/container/product-list/product-list.component.html
+++ b/src/app/product-management/components/container/product-list/product-list.component.html
@@ -1,11 +1,1 @@
-<div class="product-container">
-  <app-product-list-view> </app-product-list-view>
-  <app-product-list-view> </app-product-list-view>
-  <app-product-list-view> </app-product-list-view>
-  <app-product-list-view> </app-product-list-view>
-  <app-product-list-view> </app-product-list-view>
-  <app-product-list-view> </app-product-list-view>
-  <app-product-list-view> </app-product-list-view>
-  <app-product-list-view> </app-product-list-view>
- 
-</div>
+<app-product-list-view [cards]="cards|async"> </app-product-list-view>
